5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4191/executions/1888_1644.log
== TEST (2019-07-09 16:17:27) 
-- CODE:
from numpy import *

vetor=array(eval(input("Notas: ")))
reprovado=0
for i in range(size(vetor)):
	if(vetor[i]<5):
		reprovado=reprovado +1
		
vet=zeros(reprovados, dtype=int)		

for i in range(size(vetor)):
	if(vetor[i]<5):
		vet[i]=i

print(reprovados)		
print(vet)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:17:48) 
-- CODE:
from numpy import *

vetor=array(eval(input("Notas: ")))
reprovado=0
for i in range(size(vetor)):
	if(vetor[i]<5):
		reprovado=reprovado +1
		
vet=zeros(reprovado, dtype=int)		

for i in range(size(vetor)):
	if(vetor[i]<5):
		vet[i]=i

print(reprovado)		
print(vet)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:18:43) 
-- CODE:
from numpy import *

vetor=array(eval(input("Notas: ")))
reprovado=0
for i in range(size(vetor)):
	if(vetor[i]<5):
		reprovado=reprovado +1
		
vet=zeros(reprovado, dtype=int)		
a=0
for i in range(size(vetor)):
	if(vetor[i]<5):
		vet[i]=i
		a=a+1
print(reprovado)		
print(vet)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:19:48) 
-- CODE:
from numpy import *

vetor=array(eval(input("Notas: ")))
reprovado=0
for i in range(size(vetor)):
	if(vetor[i]<5):
		reprovado=reprovado +1
		
vet=zeros(reprovado, dtype=int)		
a=0
for j in range(size(vetor)):
	if(vetor[j]<5):
		vet[j]=j
		a=a+1
print(reprovado)		
print(vet)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:19:57) 
-- CODE:
from numpy import *

vetor=array(eval(input("Notas: ")))
reprovado=0
for i in range(size(vetor)):
	if(vetor[i]<5):
		reprovado=reprovado +1
		
vet=zeros(reprovado, dtype=int)		
a=0
for j in range(size(vetor)):
	if(vetor[j]<5):
		vet[j]=j
		a=a+1
print(reprovado)		
print(vet)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:20:16) 
-- CODE:
from numpy import *

vetor=array(eval(input("Notas: ")))
reprovado=0
for i in range(size(vetor)):
	if(vetor[i]<5):
		reprovado=reprovado +1
		
vet=zeros(reprovado, dtype=int)		
a=0
for j in range(size(vet)):
	if(vetor[j]<5):
		vet[j]=j
		a=a+1
print(reprovado)		
print(vet)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:20:25) 
-- CODE:
from numpy import *

vetor=array(eval(input("Notas: ")))
reprovado=0
for i in range(size(vetor)):
	if(vetor[i]<5):
		reprovado=reprovado +1
		
vet=zeros(reprovado, dtype=int)		
a=0
for j in range(size(vet)):
	if(vetor[j]<5):
		vet[j]=j
		a=a+1
print(reprovado)		
print(vet)		
-- EXECUTION TIME:
1.0435
-- TEST CASE 1:
---- input:
[4.3,5.2,3.6,10,9.8,7.1,5,9.0,4.2,7.0,4.5]
---- correct output:
4
[ 0  2  8 10]
---- user output:
4
[0 0 2 0]
-- TEST CASE 2:
---- input:
[7.5,2.4,3.6,4,7.9,4.5,4.2,7.0,4.5]
---- correct output:
6
[1 2 3 5 6 8]
---- user output:
6
[0 1 2 3 0 5]
-- TEST CASE 3:
---- input:
[3.6,2.9,5,7,4.5,7.8,9.0]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 1 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:20:29) 
-- CODE:
from numpy import *

vetor=array(eval(input("Notas: ")))
reprovado=0
for i in range(size(vetor)):
	if(vetor[i]<5):
		reprovado=reprovado +1
		
vet=zeros(reprovado, dtype=int)		
a=0
for j in range(size(vet)):
	if(vetor[j]<5):
		vet[j]=j
		a=a+1
print(reprovado)		
print(vet)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:21:20) 
-- CODE:
from numpy import *

vetor=array(eval(input("Notas: ")))
reprovado=0
for i in range(size(vetor)):
	if(vetor[i]<5):
		reprovado=reprovado +1
		
vet=zeros(reprovado, dtype=int)		
a=0
for j in range(size(vet)):
	if(vetor[j]<5):
		vet[j]=a
		a=a+1
print(reprovado)		
print(vet)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:21:44) 
-- CODE:
from numpy import *

vetor=array(eval(input("Notas: ")))
reprovado=0
for i in range(size(vetor)):
	if(vetor[i]<5):
		reprovado=reprovado +1
		
vet=zeros(reprovado, dtype=int)		
a=0
for j in range(size(vet)):
	if(vetor[j]<5):
		a=a+1
		vet[j]=a
		
print(reprovado)		
print(vet)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:22:01) 
-- CODE:
from numpy import *

vetor=array(eval(input("Notas: ")))
reprovado=0
for i in range(size(vetor)):
	if(vetor[i]<5):
		reprovado=reprovado +1
		
vet=zeros(reprovado, dtype=int)		
a=0
for j in range(size(vet)):
	if(vetor[j]<5):
		a=a+1
		vet[j]=a
		
print(reprovado)		
print(vet)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:22:58) 
-- CODE:
from numpy import *

vetor=array(eval(input("Notas: ")))
reprovado=0
for i in range(size(vetor)):
	if(vetor[i]<5):
		reprovado=reprovado +1
		
vet=zeros(reprovado, dtype=int)		
a=0
for j in range(size(vetor)):
	if(vetor[j]<5):
		vet[j]=j
		a=a+1
		
		
		
print(reprovado)		
print(vet)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:23:10) 
-- CODE:
from numpy import *

vetor=array(eval(input("Notas: ")))
reprovado=0
for i in range(size(vetor)):
	if(vetor[i]<5):
		reprovado=reprovado +1
		
vet=zeros(reprovado, dtype=int)		
a=0
for j in range(size(vett)):
	if(vetor[j]<5):
		vet[j]=j
		a=a+1
		
		
		
print(reprovado)		
print(vet)		
-- EXECUTION TIME:
0.859584
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1644/main.py", line 11, in <module>
    for j in range(size(vett)):
NameError: name 'vett' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:23:18) 
-- CODE:
from numpy import *

vetor=array(eval(input("Notas: ")))
reprovado=0
for i in range(size(vetor)):
	if(vetor[i]<5):
		reprovado=reprovado +1
		
vet=zeros(reprovado, dtype=int)		
a=0
for j in range(size(vett)):
	if(vetor[j]<5):
		vet[j]=j
		a=a+1
		
		
		
print(reprovado)		
print(vet)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:23:28) 
-- CODE:
from numpy import *

vetor=array(eval(input("Notas: ")))
reprovado=0
for i in range(size(vetor)):
	if(vetor[i]<5):
		reprovado=reprovado +1
		
vet=zeros(reprovado, dtype=int)		
a=0
for j in range(size(vet)):
	if(vetor[j]<5):
		vet[j]=j
		a=a+1
		
		
		
print(reprovado)		
print(vet)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:25:05) 
-- CODE:
from numpy import *

vetor=array(eval(input("Notas: ")))
reprovado=0
for i in range(size(vetor)):
	if(vetor[i]<5):
		reprovado=reprovado +1
		
vet=zeros(reprovado, dtype=int)		
a=0
for j in range(size(vet)):
	if(vetor[j]<5):
		vet[j]=a+j
		a=a+1
		
		
		
print(reprovado)		
print(vet)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:28:14) 
-- CODE:
from numpy import *

vetor=array(eval(input("Notas: ")))
reprovado=0
for i in range(size(vetor)):
	if(vetor[i]<5):
		reprovado=reprovado +1
		
vet=zeros(reprovado, dtype=int)		
a=0
for j in range(size(vet)):
	if(vetor[a]<5):
		vet[a]=j
		a=a+1
		
		
		
print(reprovado)		
print(vet)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:29:13) 
-- CODE:
from numpy import *

vetor=array(eval(input("Notas: ")))
reprovado=0
for i in range(size(vetor)):
	if(vetor[i]<5):
		reprovado=reprovado +1
		
a=zeros(reprovado, dtype=int)		
b=0
for j in range(size(vetor)):
	if(vetor[j]<5):
		a[b]=j
		a=a+1
		
		
		
print(reprovado)		
print(vet)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:29:22) 
-- CODE:
from numpy import *

vetor=array(eval(input("Notas: ")))
reprovado=0
for i in range(size(vetor)):
	if(vetor[i]<5):
		reprovado=reprovado +1
		
a=zeros(reprovado, dtype=int)		
b=0
for j in range(size(vetor)):
	if(vetor[j]<5):
		a[b]=j
		a=a+1
		
		
		
print(reprovado)		
print(a)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:29:49) 
-- CODE:
from numpy import *

vetor=array(eval(input("Notas: ")))
reprovado=0
for i in range(size(vetor)):
	if(vetor[i]<5):
		reprovado=reprovado +1
		
a=zeros(reprovado, dtype=int)		
b=0
for j in range(size(vetor)):
	if(vetor[j]<5):
		a[b]=j
		a=a+1
		
		
		
print(reprovado)		
print(a)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:30:17) 
-- CODE:
from numpy import *

vetor=array(eval(input("Notas: ")))
reprovado=0
for i in range(size(vetor)):
	if(vetor[i]<5):
		reprovado=reprovado +1
		
a=zeros(reprovado, dtype=int)		
b=0
for j in range(size(vetor)):
	if(vetor[j]<5):
		a[b]=j
		a=a+1
		
		
vet[0]=vet[0]-2		
print(reprovado)		
print(a)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:30:30) 
-- CODE:
from numpy import *

vetor=array(eval(input("Notas: ")))
reprovado=0
for i in range(size(vetor)):
	if(vetor[i]<5):
		reprovado=reprovado +1
		
a=zeros(reprovado, dtype=int)		
b=0
for j in range(size(vetor)):
	if(vetor[j]<5):
		a[b]=j
		a=a+1
		
		
a[0]=a[0]-2		
print(reprovado)		
print(a)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:30:43) 
-- CODE:
from numpy import *

vetor=array(eval(input("Notas: ")))
reprovado=0
for i in range(size(vetor)):
	if(vetor[i]<5):
		reprovado=reprovado +1
		
a=zeros(reprovado, dtype=int)		
b=0
for j in range(size(vetor)):
	if(vetor[j]<5):
		a[b]=j
		b=b+1
		
		
a[0]=a[0]-2		
print(reprovado)		
print(a)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:30:59) 
-- CODE:
from numpy import *

vetor=array(eval(input("Notas: ")))
reprovado=0
for i in range(size(vetor)):
	if(vetor[i]<5):
		reprovado=reprovado +1
		
a=zeros(reprovado, dtype=int)		
b=0
for j in range(size(vetor)):
	if(vetor[j]<5):
		a[b]=j
		b=b+1
		
		
	
print(reprovado)		
print(a)		
-- EXECUTION TIME:
0.917291
-- TEST CASE 1:
---- input:
[4.3,5.2,3.6,10,9.8,7.1,5,9.0,4.2,7.0,4.5]
---- correct output:
4
[ 0  2  8 10]
---- user output:
Notas: 4
[ 0  2  8 10]
-- TEST CASE 2:
---- input:
[7.5,2.4,3.6,4,7.9,4.5,4.2,7.0,4.5]
---- correct output:
6
[1 2 3 5 6 8]
---- user output:
Notas: 6
[1 2 3 5 6 8]
-- TEST CASE 3:
---- input:
[3.6,2.9,5,7,4.5,7.8,9.0]
---- correct output:
3
[0 1 4]
---- user output:
Notas: 3
[0 1 4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:31:00) 
-- CODE:
from numpy import *

vetor=array(eval(input("Notas: ")))
reprovado=0
for i in range(size(vetor)):
	if(vetor[i]<5):
		reprovado=reprovado +1
		
a=zeros(reprovado, dtype=int)		
b=0
for j in range(size(vetor)):
	if(vetor[j]<5):
		a[b]=j
		b=b+1
		
		
	
print(reprovado)		
print(a)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:31:12) 
-- CODE:
from numpy import *

vetor=array(eval(input("Notas: ")))
reprovado=0
for i in range(size(vetor)):
	if(vetor[i]<5):
		reprovado=reprovado +1
		
a=zeros(reprovado, dtype=int)		
b=0
for j in range(size(vetor)):
	if(vetor[j]<5):
		a[b]=j
		b=b+1
		
		
	
print(reprovado)		
print(a)		
-- EXECUTION TIME:
1.07752
-- TEST CASE 1:
---- input:
[4.3,5.2,3.6,10,9.8,7.1,5,9.0,4.2,7.0,4.5]
---- correct output:
4
[ 0  2  8 10]
---- user output:
4
[ 0  2  8 10]
-- TEST CASE 2:
---- input:
[7.5,2.4,3.6,4,7.9,4.5,4.2,7.0,4.5]
---- correct output:
6
[1 2 3 5 6 8]
---- user output:
6
[1 2 3 5 6 8]
-- TEST CASE 3:
---- input:
[3.6,2.9,5,7,4.5,7.8,9.0]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
